Fix overflow on about page

--- a/front-end/src/components/about/About.css
+++ b/front-end/src/components/about/About.css
@@ -17,3 +17,7 @@
 p {
   font-weight: 300;
 }
+
+.container {
+  overflow-y: auto;
+}
